--- a/conocenos.html
+++ b/conocenos.html
@@ -24,10 +24,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">productos </a>
+                        <a class="nav-link" href="">contacos </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">conocenos </a>
+                        <a class="nav-link" href="conocenos.html">conocenos </a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -38,7 +38,7 @@
                             <li><a class="dropdown-item" href="adidas.html">Adidas</a></li>
                             <li><a class="dropdown-item" href="nike.html">Nike</a></li>
                             <li><a class="dropdown-item" href="vans.html">Vans</a></li>
-                            <li><a class="dropdown-item" href="productos.html">Vans</a></li>
+                         
                         </ul>
                     </li>
                     <li class="nav-item">
