--- a/nike.html
+++ b/nike.html
@@ -21,7 +21,7 @@
                 <a class="nav-link active" aria-current="page" href="">contactos </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">conocenos </a>
+                <a class="nav-link" href="conocenos.html">conocenos </a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -31,7 +31,7 @@
                     <li><a class="dropdown-item" href="adidas.html">Adidas</a></li>
                     <li><a class="dropdown-item" href="nike.html">Nike</a></li>
                     <li><a class="dropdown-item" href="vans.html">Vans</a></li>
-                    <li><a class="dropdown-item" href="productos.html">Vans</a></li>
+                   
                 </ul>
               </li>
               <li class="nav-item">
@@ -45,6 +45,95 @@
       </nav>
     
         </div>
+    </div>
+    <div class="container">
+      <div class="row">
+          <div class="col col-md-3">
+              <div class="card" style="width: 20rem;">
+                  <a href=""><img src="img/w.jpg" class="card-img-top" alt="..." height="485vh"></a>
+                  <div class="card-body">
+                    <h5 class="card-title text-center">GRAFFITIES edicion Soideart</h5>
+                    <h6 class="text-center">$ 350.000</h6>
+                    <a href=""><input class="text-center but" type="button" value="Añadir al Carrito"></a>
+                  </div>
+                </div>
+          </div>
+          <div class="col col-md-3">
+              <div class="card" style="width: 20rem;">
+                  <img src="img/sk.jpg" class="card-img-top" alt="..." height="485vh">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">ICE CREAM edicion Soideart</h5>
+                    <h6 class="text-center">$ 350.000</h6>
+                    <input class="text-center but" type="button" value="Añadir al Carrito">
+                  </div>
+                </div>
+          </div>
+          <div class="col col-md-3">
+              <div class="card" style="width: 20rem;">
+                  <img src="img/sss.jpg" class="card-img-top" alt="..." height="485vh">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">TIGRE edicion Soideart</h5>
+                    <h6 class="text-center">$ 350.000</h6>
+                    <input class="text-center but" type="button" value="Añadir al Carrito">
+                  </div>
+                </div>
+          </div>
+          <div class="col col-md-3">
+              <div class="card" style="width: 20rem;">
+                  <img src="img/uuu.jpg" class="card-img-top" alt="..." height="485vh">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">CROCO edicion Soideart</h5>
+                    <h6 class="text-center">$ 350.000</h6>
+                    <input class="text-center but" type="button" value="Añadir al Carrito">
+                  </div>
+                </div>
+          </div>
+      </div>
+    </div>
+    <br><br><br>
+    <div class="container">
+      <div class="row">
+          <div class="col col-md-3">
+              <div class="card" style="width: 20rem;">
+                  <img src="img/we.jpg" class="card-img-top" alt="..." height="450vh">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">MAIPURE Negro Corcho</h5>
+                    <h6 class="text-center">$ 220.000</h6>
+                    <input class="text-center but" type="button" value="Añadir al Carrito">
+                  </div>
+                </div>
+          </div>
+          <div class="col col-md-3">
+              <div class="card" style="width: 20rem;">
+                  <img src="img/yyy.jpg" class="card-img-top" alt="..." height="450vh">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">Sudadera Thrasher Flame Grey</h5>
+                    <h6 class="text-center">$ 150.000</h6>
+                    <input class="text-center but" type="button" value="Añadir al Carrito">
+                  </div>
+                </div>
+          </div>
+          <div class="col col-md-3">
+              <div class="card" style="width: 20rem;">
+                  <img src="img/ppp.jpeg" class="card-img-top" alt="..." height="426vh">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">Calcetines Ripndip Skater Nerm Slate Blue</h5>
+                    <h6 class="text-center">$ 15.000</h6>
+                    <input class="text-center but" type="button" value="Añadir al Carrito">
+                  </div>
+                </div>
+          </div>
+          <div class="col col-md-3">
+              <div class="card" style="width: 20rem;">
+                  <img src="img/iiii.jpg" class="card-img-top" alt="..." height="450vh">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">Gorro Dickies Gibsland Black</h5>
+                    <h6 class="text-center">$ 30.000</h6>
+                    <input class="text-center but" type="button" value="Añadir al Carrito">
+                  </div>
+                </div>
+          </div>
+      </div>
     </div>
 
 </body>
