--- a/vans.html
+++ b/vans.html
@@ -27,7 +27,7 @@
                         <a class="nav-link active" aria-current="page" href="">contactos </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">conocenos </a>
+                        <a class="nav-link" href="conocenos.html">conocenos </a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -51,7 +51,95 @@
     </nav>
 
 </body>
-
+<div class="container">
+    <div class="row">
+        <div class="col col-md-3">
+            <div class="card" style="width: 20rem;">
+                <a href=""><img src="img/w.jpg" class="card-img-top" alt="..." height="485vh"></a>
+                <div class="card-body">
+                  <h5 class="card-title text-center">GRAFFITIES edicion Soideart</h5>
+                  <h6 class="text-center">$ 350.000</h6>
+                  <a href=""><input class="text-center but" type="button" value="Añadir al Carrito"></a>
+                </div>
+              </div>
+        </div>
+        <div class="col col-md-3">
+            <div class="card" style="width: 20rem;">
+                <img src="img/sk.jpg" class="card-img-top" alt="..." height="485vh">
+                <div class="card-body">
+                  <h5 class="card-title text-center">ICE CREAM edicion Soideart</h5>
+                  <h6 class="text-center">$ 350.000</h6>
+                  <input class="text-center but" type="button" value="Añadir al Carrito">
+                </div>
+              </div>
+        </div>
+        <div class="col col-md-3">
+            <div class="card" style="width: 20rem;">
+                <img src="img/sss.jpg" class="card-img-top" alt="..." height="485vh">
+                <div class="card-body">
+                  <h5 class="card-title text-center">TIGRE edicion Soideart</h5>
+                  <h6 class="text-center">$ 350.000</h6>
+                  <input class="text-center but" type="button" value="Añadir al Carrito">
+                </div>
+              </div>
+        </div>
+        <div class="col col-md-3">
+            <div class="card" style="width: 20rem;">
+                <img src="img/uuu.jpg" class="card-img-top" alt="..." height="485vh">
+                <div class="card-body">
+                  <h5 class="card-title text-center">CROCO edicion Soideart</h5>
+                  <h6 class="text-center">$ 350.000</h6>
+                  <input class="text-center but" type="button" value="Añadir al Carrito">
+                </div>
+              </div>
+        </div>
+    </div>
+  </div>
+  <br><br><br>
+  <div class="container">
+    <div class="row">
+        <div class="col col-md-3">
+            <div class="card" style="width: 20rem;">
+                <img src="img/we.jpg" class="card-img-top" alt="..." height="450vh">
+                <div class="card-body">
+                  <h5 class="card-title text-center">MAIPURE Negro Corcho</h5>
+                  <h6 class="text-center">$ 220.000</h6>
+                  <input class="text-center but" type="button" value="Añadir al Carrito">
+                </div>
+              </div>
+        </div>
+        <div class="col col-md-3">
+            <div class="card" style="width: 20rem;">
+                <img src="img/yyy.jpg" class="card-img-top" alt="..." height="450vh">
+                <div class="card-body">
+                  <h5 class="card-title text-center">Sudadera Thrasher Flame Grey</h5>
+                  <h6 class="text-center">$ 150.000</h6>
+                  <input class="text-center but" type="button" value="Añadir al Carrito">
+                </div>
+              </div>
+        </div>
+        <div class="col col-md-3">
+            <div class="card" style="width: 20rem;">
+                <img src="img/ppp.jpeg" class="card-img-top" alt="..." height="426vh">
+                <div class="card-body">
+                  <h5 class="card-title text-center">Calcetines Ripndip Skater Nerm Slate Blue</h5>
+                  <h6 class="text-center">$ 15.000</h6>
+                  <input class="text-center but" type="button" value="Añadir al Carrito">
+                </div>
+              </div>
+        </div>
+        <div class="col col-md-3">
+            <div class="card" style="width: 20rem;">
+                <img src="img/iiii.jpg" class="card-img-top" alt="..." height="450vh">
+                <div class="card-body">
+                  <h5 class="card-title text-center">Gorro Dickies Gibsland Black</h5>
+                  <h6 class="text-center">$ 30.000</h6>
+                  <input class="text-center but" type="button" value="Añadir al Carrito">
+                </div>
+              </div>
+        </div>
+    </div>
+  </div>
 </html>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
