--- a/public/adidas.html
+++ b/public/adidas.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <a href="inicio.html"> <img  class="icono " src="/img/zapato icono.png"   alt=""></a>
+        <a href="inicio.html"> <img  class="icono " src="img/zapato icono.png"   alt=""></a>
         <div class="container-fluid">
           <a class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
