--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-       <a href=""> <img  class="icono " src="/img/zapato icono.png"   alt=""></a>
+       <a href="index.html"> <img  class="icono " src="img/zapato icono.png"   alt=""></a>
         <div class="container-fluid">
           <a class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,13 +48,13 @@
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/img/banner.jpg" class="d-block w-100" alt="...">
+            <img src="img/banner.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/img/dunk.jpg" class="d-block w-100" alt="...">
+            <img src="img/dunk.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/img/running-zapatillas.jpg" class="d-block w-100" alt="...">
+            <img src="img/running-zapatillas.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
