--- a/public/vans.html
+++ b/public/vans.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <a href="inicio.html"> <img class="icono " src="/img/zapato icono.png" alt=""></a>
+        <a href="index.html"> <img class="icono " src="img/zapato icono.png" alt=""></a>
         <div class="container-fluid">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -55,7 +55,7 @@
     <div class="row">
         <div class="col col-md-3">
             <div class="card" style="width: 20rem;">
-                <a href=""><img src="img/w.jpg" class="card-img-top" alt="..." height="485vh"></a>
+                <a href=""><img src="img/buso1.webp" class="card-img-top" alt="..." height="485vh"></a>
                 <div class="card-body">
                   <h5 class="card-title text-center">GRAFFITIES edicion Soideart</h5>
                   <h6 class="text-center">$ 350.000</h6>
@@ -65,7 +65,7 @@
         </div>
         <div class="col col-md-3">
             <div class="card" style="width: 20rem;">
-                <img src="img/sk.jpg" class="card-img-top" alt="..." height="485vh">
+                <img src="img/descarga.jpg" class="card-img-top" alt="..." height="485vh">
                 <div class="card-body">
                   <h5 class="card-title text-center">ICE CREAM edicion Soideart</h5>
                   <h6 class="text-center">$ 350.000</h6>
@@ -75,7 +75,7 @@
         </div>
         <div class="col col-md-3">
             <div class="card" style="width: 20rem;">
-                <img src="img/sss.jpg" class="card-img-top" alt="..." height="485vh">
+                <img src="img/vanzs 2.jpg" class="card-img-top" alt="..." height="485vh">
                 <div class="card-body">
                   <h5 class="card-title text-center">TIGRE edicion Soideart</h5>
                   <h6 class="text-center">$ 350.000</h6>
@@ -85,7 +85,7 @@
         </div>
         <div class="col col-md-3">
             <div class="card" style="width: 20rem;">
-                <img src="img/uuu.jpg" class="card-img-top" alt="..." height="485vh">
+                <img src="img/vanz 3.webp" class="card-img-top" alt="..." height="485vh">
                 <div class="card-body">
                   <h5 class="card-title text-center">CROCO edicion Soideart</h5>
                   <h6 class="text-center">$ 350.000</h6>
@@ -100,7 +100,7 @@
     <div class="row">
         <div class="col col-md-3">
             <div class="card" style="width: 20rem;">
-                <img src="img/we.jpg" class="card-img-top" alt="..." height="450vh">
+                <img src="img/vanz 4.webp" class="card-img-top" alt="..." height="450vh">
                 <div class="card-body">
                   <h5 class="card-title text-center">MAIPURE Negro Corcho</h5>
                   <h6 class="text-center">$ 220.000</h6>
@@ -110,7 +110,7 @@
         </div>
         <div class="col col-md-3">
             <div class="card" style="width: 20rem;">
-                <img src="img/yyy.jpg" class="card-img-top" alt="..." height="450vh">
+                <img src="img/vanz 5.webp" class="card-img-top" alt="..." height="450vh">
                 <div class="card-body">
                   <h5 class="card-title text-center">Sudadera Thrasher Flame Grey</h5>
                   <h6 class="text-center">$ 150.000</h6>
@@ -120,7 +120,7 @@
         </div>
         <div class="col col-md-3">
             <div class="card" style="width: 20rem;">
-                <img src="img/ppp.jpeg" class="card-img-top" alt="..." height="426vh">
+                <img src="img/vanzs 6.webp" class="card-img-top" alt="..." height="426vh">
                 <div class="card-body">
                   <h5 class="card-title text-center">Calcetines Ripndip Skater Nerm Slate Blue</h5>
                   <h6 class="text-center">$ 15.000</h6>
@@ -130,7 +130,7 @@
         </div>
         <div class="col col-md-3">
             <div class="card" style="width: 20rem;">
-                <img src="img/iiii.jpg" class="card-img-top" alt="..." height="450vh">
+                <img src="img/vanzs7.webp" class="card-img-top" alt="..." height="450vh">
                 <div class="card-body">
                   <h5 class="card-title text-center">Gorro Dickies Gibsland Black</h5>
                   <h6 class="text-center">$ 30.000</h6>
