--- a/public/conocenos.html
+++ b/public/conocenos.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <a href="inicio.html"> <img class="icono " src="/img/zapato icono.png" alt=""></a>
+        <a href="index.html"> <img class="icono " src="img/zapato icono.png" alt=""></a>
         <div class="container-fluid">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
