--- a/public/vans.html
+++ b/public/vans.html
@@ -57,8 +57,8 @@
             <div class="card" style="width: 20rem;">
                 <a href=""><img src="img/buso1.webp" class="card-img-top" alt="..." height="485vh"></a>
                 <div class="card-body">
-                  <h5 class="card-title text-center">GRAFFITIES edicion Soideart</h5>
-                  <h6 class="text-center">$ 350.000</h6>
+                  <h5 class="card-title text-center">buso vans EDICION JUJU</h5>
+                  <h6 class="text-center">$ 250.000</h6>
                   <a href=""><input class="text-center but" type="button" value="Añadir al Carrito"></a>
                 </div>
               </div>
@@ -67,8 +67,8 @@
             <div class="card" style="width: 20rem;">
                 <img src="img/descarga.jpg" class="card-img-top" alt="..." height="485vh">
                 <div class="card-body">
-                  <h5 class="card-title text-center">ICE CREAM edicion Soideart</h5>
-                  <h6 class="text-center">$ 350.000</h6>
+                  <h5 class="card-title text-center">vans high old school</h5>
+                  <h6 class="text-center">$ 450.000</h6>l
                   <input class="text-center but" type="button" value="Añadir al Carrito">
                 </div>
               </div>
@@ -77,7 +77,7 @@
             <div class="card" style="width: 20rem;">
                 <img src="img/vanzs 2.jpg" class="card-img-top" alt="..." height="485vh">
                 <div class="card-body">
-                  <h5 class="card-title text-center">TIGRE edicion Soideart</h5>
+                  <h5 class="card-title text-center">white old school</h5>
                   <h6 class="text-center">$ 350.000</h6>
                   <input class="text-center but" type="button" value="Añadir al Carrito">
                 </div>
@@ -87,7 +87,7 @@
             <div class="card" style="width: 20rem;">
                 <img src="img/vanz 3.webp" class="card-img-top" alt="..." height="485vh">
                 <div class="card-body">
-                  <h5 class="card-title text-center">CROCO edicion Soideart</h5>
+                  <h5 class="card-title text-center">black old school</h5>
                   <h6 class="text-center">$ 350.000</h6>
                   <input class="text-center but" type="button" value="Añadir al Carrito">
                 </div>
@@ -102,7 +102,7 @@
             <div class="card" style="width: 20rem;">
                 <img src="img/vanz 4.webp" class="card-img-top" alt="..." height="450vh">
                 <div class="card-body">
-                  <h5 class="card-title text-center">MAIPURE Negro Corcho</h5>
+                  <h5 class="card-title text-center">black an white old school</h5>
                   <h6 class="text-center">$ 220.000</h6>
                   <input class="text-center but" type="button" value="Añadir al Carrito">
                 </div>
@@ -112,8 +112,8 @@
             <div class="card" style="width: 20rem;">
                 <img src="img/vanz 5.webp" class="card-img-top" alt="..." height="450vh">
                 <div class="card-body">
-                  <h5 class="card-title text-center">Sudadera Thrasher Flame Grey</h5>
-                  <h6 class="text-center">$ 150.000</h6>
+                  <h5 class="card-title text-center">rain green old school</h5>
+                  <h6 class="text-center">$ 450.000</h6>
                   <input class="text-center but" type="button" value="Añadir al Carrito">
                 </div>
               </div>
@@ -122,8 +122,8 @@
             <div class="card" style="width: 20rem;">
                 <img src="img/vanzs 6.webp" class="card-img-top" alt="..." height="426vh">
                 <div class="card-body">
-                  <h5 class="card-title text-center">Calcetines Ripndip Skater Nerm Slate Blue</h5>
-                  <h6 class="text-center">$ 15.000</h6>
+                  <h5 class="card-title text-center">white sport edition</h5>
+                  <h6 class="text-center">$ 255.000</h6>
                   <input class="text-center but" type="button" value="Añadir al Carrito">
                 </div>
               </div>
@@ -132,8 +132,8 @@
             <div class="card" style="width: 20rem;">
                 <img src="img/vanzs7.webp" class="card-img-top" alt="..." height="450vh">
                 <div class="card-body">
-                  <h5 class="card-title text-center">Gorro Dickies Gibsland Black</h5>
-                  <h6 class="text-center">$ 30.000</h6>
+                  <h5 class="card-title text-center">red old scool</h5>
+                  <h6 class="text-center">$ 300.000</h6>
                   <input class="text-center but" type="button" value="Añadir al Carrito">
                 </div>
               </div>
