--- a/public/adidas.html
+++ b/public/adidas.html
@@ -48,7 +48,7 @@
         <div class="row">
             <div class="col col-md-3">
                 <div class="card" style="width: 20rem;">
-                    <a href=""><img src="img/w.jpg" class="card-img-top" alt="..." height="485vh"></a>
+                    <a href=""><img src="img/adidas 1.jpg" class="card-img-top" alt="..." height="485vh"></a>
                     <div class="card-body">
                       <h5 class="card-title text-center">GRAFFITIES edicion Soideart</h5>
                       <h6 class="text-center">$ 350.000</h6>
@@ -58,7 +58,7 @@
             </div>
             <div class="col col-md-3">
                 <div class="card" style="width: 20rem;">
-                    <img src="img/sk.jpg" class="card-img-top" alt="..." height="485vh">
+                    <img src="img/adidas 2.webp" class="card-img-top" alt="..." height="485vh">
                     <div class="card-body">
                       <h5 class="card-title text-center">ICE CREAM edicion Soideart</h5>
                       <h6 class="text-center">$ 350.000</h6>
@@ -68,7 +68,7 @@
             </div>
             <div class="col col-md-3">
                 <div class="card" style="width: 20rem;">
-                    <img src="img/sss.jpg" class="card-img-top" alt="..." height="485vh">
+                    <img src="img/adidas 3.webp" class="card-img-top" alt="..." height="485vh">
                     <div class="card-body">
                       <h5 class="card-title text-center">TIGRE edicion Soideart</h5>
                       <h6 class="text-center">$ 350.000</h6>
@@ -78,7 +78,7 @@
             </div>
             <div class="col col-md-3">
                 <div class="card" style="width: 20rem;">
-                    <img src="img/uuu.jpg" class="card-img-top" alt="..." height="485vh">
+                    <img src="img/adidas 4.webp" class="card-img-top" alt="..." height="485vh">
                     <div class="card-body">
                       <h5 class="card-title text-center">CROCO edicion Soideart</h5>
                       <h6 class="text-center">$ 350.000</h6>
@@ -93,7 +93,7 @@
         <div class="row">
             <div class="col col-md-3">
                 <div class="card" style="width: 20rem;">
-                    <img src="img/we.jpg" class="card-img-top" alt="..." height="450vh">
+                    <img src="img/adidas 5.webp" class="card-img-top" alt="..." height="450vh">
                     <div class="card-body">
                       <h5 class="card-title text-center">MAIPURE Negro Corcho</h5>
                       <h6 class="text-center">$ 220.000</h6>
@@ -103,7 +103,7 @@
             </div>
             <div class="col col-md-3">
                 <div class="card" style="width: 20rem;">
-                    <img src="img/yyy.jpg" class="card-img-top" alt="..." height="450vh">
+                    <img src="img/adidas 6.webp" class="card-img-top" alt="..." height="450vh">
                     <div class="card-body">
                       <h5 class="card-title text-center">Sudadera Thrasher Flame Grey</h5>
                       <h6 class="text-center">$ 150.000</h6>
@@ -113,7 +113,7 @@
             </div>
             <div class="col col-md-3">
                 <div class="card" style="width: 20rem;">
-                    <img src="img/ppp.jpeg" class="card-img-top" alt="..." height="426vh">
+                    <img src="img/adidas 7.webp" class="card-img-top" alt="..." height="426vh">
                     <div class="card-body">
                       <h5 class="card-title text-center">Calcetines Ripndip Skater Nerm Slate Blue</h5>
                       <h6 class="text-center">$ 15.000</h6>
@@ -123,7 +123,7 @@
             </div>
             <div class="col col-md-3">
                 <div class="card" style="width: 20rem;">
-                    <img src="img/iiii.jpg" class="card-img-top" alt="..." height="450vh">
+                    <img src="img/adidas 8.webp" class="card-img-top" alt="..." height="450vh">
                     <div class="card-body">
                       <h5 class="card-title text-center">Gorro Dickies Gibsland Black</h5>
                       <h6 class="text-center">$ 30.000</h6>
